--- a/css/index.css
+++ b/css/index.css
@@ -91,6 +91,27 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    text-align: center;
+    color: #fff;
+    padding-top: 1%;
+}
+header > div {
+    background: rgba(0, 0, 0, 0.7);
+}
+nav a {
+    color: #fff;
+}
+
+nav div:first-child {
+    width: 70%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+nav i {
+    font-size: 4rem;
+    margin: 2%;
 }
 
 /* spacers */
@@ -111,6 +132,16 @@ header {
     height: 100vh;
     text-align: center;
     background-color: rgb(0, 4, 17);
+    color: #fff;
+}
+
+.gallery h2 {
+    padding-top:2%;
+}
+
+.gallery img {
+    width: 25%;
+    margin: 1%;
 }
 
 /* about us section */
@@ -122,6 +153,7 @@ header {
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
+    color:#fff;
 }
 
 .about-container {
@@ -149,6 +181,7 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     background-color: rgb(0, 4, 17);
+    color: #fff;
 }
 
 .contact-container {
@@ -188,22 +221,70 @@ header {
     width: 25%;
 }
 
+.contacts a {
+    color: #fff;
+}
+
 /* footer section */
 footer {
     width: 100%;
     height: 15vh;
     padding-top: 2.5vh;
     font-size: 3rem;
+    background-color: black;
+    display: flex;
+    color: #fff;
+    justify-content: space-between;
+}
+.email-signup {
+    text-align: center;
+    padding-left: 3%;
+}
+.email-signup input {
+    font-size:3rem;
+}
+.email-signup button {
+    font-size: 3rem;
+}
+.nav {
+    width: 60%;
+    padding: 0 3%;
+}
+footer nav {
+    display: flex;
+    justify-content: space-between;
+}
+.copyright {
+    text-align: right;
+    font-size: 2rem;
+    margin-top: 2%;
 }
 
 /* mobile media query */
 @media (max-width: 428px) {
     /* header section */
-    
+    h1 {
+        font-size: 4rem    
+    }
+
+    nav div:first-child {
+        flex-direction: column;
+    }
+
+    nav i {
+        font-size:3rem;
+    }
 
     /* gallery section */
     .gallery {
         height: auto;
+    }
+    .gallery h2 {
+        font-size:4rem
+    }
+    .gallery img {
+        width: 100%;
+        margin: auto;
     }
     
     /* about us section */
@@ -249,5 +330,22 @@ footer {
         height: auto;
         padding-top: 2.5vh;
         font-size: 2rem;
+        display: block;
+    }
+    .nav {
+        width: 100%;
+        padding:0;
+        margin:0;
+    }
+    .nav nav {
+        width: 100%;
+        flex-direction: column;
+        text-align: center; 
+    }
+    .nav nav a {
+        width: 100%;
+    }
+    .copyright {
+        font-size:1.5rem
     }
 }
