--- a/css/menu.css
+++ b/css/menu.css
@@ -75,17 +75,16 @@ h2 {
 }
 
 h3 {
-    font-size: 5rem;
-}
-
-h4 {
     font-size: 4rem;
 }
 
-p, a {
+h4 {
     font-size: 3rem;
 }
 
+p, a {
+    font-size: 2rem;
+} 
 /* header section */
 header {
     width: 100%;
@@ -94,6 +93,26 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    text-align: center;
+    color: #fff; 
+}
+header > div {
+    background: rgba(0, 0, 0, 0.7);
+}
+nav a {
+    color: #fff;
+}
+
+nav div:first-child {
+    width: 70%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+nav i {
+    font-size: 4rem;
+    margin: 2%;
 }
 
 /* spacer */
@@ -118,35 +137,147 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    color:#fff; 
 }
-
+.menu > div {
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 2% 5%;
+}
+.menu h2 {
+    text-align: center; 
+}
+.menu-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around; 
+}
+.menu-section {
+    width: 40%;
+    padding: 3%;
+}
+.menu-item {
+    margin-bottom: 3%;
+}
+.menu-item h4 {
+    width:28%;
+    text-align: right;
+    display: inline-block;
+}
+.menu-item h4:first-child {
+    width: 70%;
+    text-align: left;
+}
 /* footer section */
 footer {
     width: 100%;
     height: 15vh;
     padding-top: 2.5vh;
     font-size: 3rem;
+    background-color: black;
+    display: flex;
+    color: #fff;
+    justify-content: space-between;
+}
+footer p, footer a {
+    font-size: 3rem;
+}
+.email-signup {
+    text-align: center;
+    padding-left: 3%;
+}
+.email-signup input {
+    font-size:3rem;
+}
+.email-signup button {
+    font-size: 3rem;
+}
+.nav {
+    width: 60%;
+    padding: 0 3%;
+}
+footer nav {
+    display: flex;
+    justify-content: space-between;
+}
+.copyright {
+    text-align: right;
+    font-size: 2rem;
+    margin-top: 2%;
 }
 
 /* mobile media query */
 @media (max-width: 428px) {
     /* header section */
-    .header-title {
-        width: 75%;
-        margin: 0 auto;
-        text-align: center;
-        font-size: 4rem;
+    h1 {
+        font-size: 4rem    
+    }
+
+    nav div:first-child {
+        flex-direction: column;
+    }
+
+    nav i {
+        font-size:3rem;
     }
 
     /* menu */
     .menu {
         background-image: none;
+        background-color: rgb(225, 239, 230);
+        color: black;
+        text-align: center;
     }
-
+    .menu h2 {
+        border-bottom: 6px solid black;
+    }
+    .menu > div {
+        background-color: unset
+    }
+    .menu-container {
+        flex-direction: column;
+        justify-content: center;
+    }
+    .menu-section {
+        width: 70%;
+        margin: auto;
+    }
+    .menu-section h3 {
+        border: 2px solid black;
+        text-align: center;
+    }
+    .menu-section h4 {
+        width: 100% !important;
+        display: block;
+        text-align: center !important;
+        font-size: 4rem
+    }
+    .menu-section p {
+        font-size:3rem
+    }
+    .menu-item {
+        border-bottom: 4px solid black;
+    }
     /* footer section */
     footer {
         height: auto;
         padding-top: 2.5vh;
         font-size: 2rem;
+        display: block;
+    }
+    .nav {
+        width: 100%;
+        padding:0;
+        margin:0;
+    }
+    .nav nav {
+        width: 100%;
+        flex-direction: column;
+        text-align: center; 
+    }
+    .nav nav a {
+        width: 100%;
+    }
+    .copyright {
+        font-size:1.5rem
     }
 }
